k8s/cart-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-api
  namespace: test
spec:
  selector:
    app: cart-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: NodePort
