k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-api
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cart-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-api
                port:
                  number: 80
